# ngdevkit-examples

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.common  Makefile.config.in  README.md  config.mk.in  configure.ac
00-standalone/: Makefile  Makefile.common  Makefile.config
00-template/: Makefile  build.mk  emu.mk
00-template/setup/ngdevkit-assets/: Makefile  base-sound-driver.s  build-srom.py  eye-catcher.s
00-template/setup/ngdevkit-assets/gfx/: LICENSES.md
00-template/setup/ngdevkit-assets/music/: LICENSES.md  ngdevkit.fur
01-helloworld/: Makefile  main.c
02-sprite/: Makefile  main.c
03-sprite-animation/: Makefile  main.c
04-palette/: Makefile  main.c  mk-gradients.py
05-scrolling/: Makefile  main.c
05-scrolling/gfx/: LICENSE.md
06-sound-adpcma/: Makefile  main.c  rom.mk  samples-map.yaml  user_commands.def  user_commands.s
06-sound-adpcma/sfx/: LICENSES.md
07-attract-and-game/: Makefile  main.c
08-software-dips/: Makefile  main.c
09-horizontal-sync/: Makefile  gen-wobble.py  main.c
10-credits-management/: Makefile  main.c
11-backup-ram/: Makefile  main.c  rom.mk
12-prom-1mb/: Makefile  main.c
13-prom-full-2mb/: Makefile  main.c  overflow.c  rom.mk
14-prom-bankswitch/: Makefile  example_interface.h  impl__bank0.c  impl__bank1.c  main.c
15-sound-adpcmb/: Makefile  main.c  samples-map.yaml  user_commands.s
15-sound-adpcmb/sfx/: LICENSE.md
16-sound-music/: Makefile  furtool.py  main.c  music-map.yaml  nsstool.py  rom.mk  sample-map.yaml  sfx-map.yaml  sfx_map.yaml  soundtool.py  user_commands.s  vrom-map.yaml
16-sound-music/music/: LICENSES.md  starship-battle.fur  starship_battle.fur
16-sound-music/musics/: starship-battle.fur
16-sound-music/sfx/: LICENSES.md
17-hello-c++/: Makefile
17-hellocd/: Makefile  main.c
17-hellocd/cdrom/: ipl.txt
18-cd-sprite/: Makefile  main.c
18-cd-sprite/cdrom/: ipl.txt
18-memory-card/: Makefile  main.c  rom.mk
assets/: Makefile  build-srom.py
sound-driver/: rom.mk
